--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "next": "^9.2.0",
     "nprogress": "^0.2.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.0",
     "@types/node": "^12.12.21",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "typescript": "3.7.3"
