--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "isomorphic-unfetch": "3.0.0",
+    "moment": "^2.24.0",
     "next": "^9.2.0",
     "nprogress": "^0.2.0",
     "react": "^16.12.0",
