--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.5.5",
+    "@next/mdx": "^9.2.1",
     "isomorphic-unfetch": "3.0.0",
     "moment": "^2.24.0",
     "next": "^9.2.0",
