--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^3.9.0"
   },
   "devDependencies": {
+    "@types/mdx-js__react": "^1.5.0",
     "@types/node": "^12.12.21",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.16",
