--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@mdx-js/loader": "^1.5.5",
     "@next/mdx": "^9.2.1",
+    "@types/react-syntax-highlighter": "^11.0.4",
     "chroma-js": "^2.1.0",
     "isomorphic-unfetch": "3.0.0",
     "moment": "^2.24.0",
     "next": "^9.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons": "^3.9.0"
+    "react-icons": "^3.9.0",
+    "react-syntax-highlighter": "^12.2.1"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.0.0",
