--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
-    "react-syntax-highlighter": "^12.2.1"
+    "react-spring": "^8.0.27",
+    "react-syntax-highlighter": "^12.2.1",
+    "toasted-notes": "^3.2.0"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.0.0",
