--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@mdx-js/loader": "^1.5.5",
     "@next/mdx": "^9.2.1",
+    "@types/lodash": "^4.14.149",
     "@types/react-syntax-highlighter": "^11.0.4",
     "chroma-js": "^2.1.0",
     "isomorphic-unfetch": "3.0.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.2.0",
     "react": "^16.12.0",
