--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^3.9.0",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^12.2.1",
+    "theme-ui": "^0.3.1",
     "toasted-notes": "^3.2.0"
   },
   "devDependencies": {
@@ -31,7 +32,13 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/theme-ui": "^0.3.1",
     "typescript": "3.7.3"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "none"
+  }
 }
