--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "isomorphic-unfetch": "3.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "next": "^9.2.0",
+    "next": "^9.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
@@ -31,7 +31,13 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "prettier": "^2.0.2",
     "typescript": "3.7.3"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none"
+  }
 }
