--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript",
+  "name": "julianbenegas",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -16,9 +16,9 @@
     "isomorphic-unfetch": "3.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "next": "^9.3.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "next": "^9.4.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^12.2.1",
