--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.5.5",
-    "@next/mdx": "^9.2.1",
+    "@mdx-js/loader": "^1.6.21",
+    "@next/mdx": "^10.0.3",
     "@types/lodash": "^4.14.149",
     "@types/react-syntax-highlighter": "^11.0.4",
     "chroma-js": "^2.1.0",
+    "date-fns": "^2.16.1",
     "isomorphic-unfetch": "3.0.0",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "next": "^9.4.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "next": "^10.0.3",
+    "next-themes": "^0.0.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-icons": "^3.9.0",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^12.2.1",
