--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "prettier": "^2.0.2",
-    "typescript": "3.7.3"
+    "typescript": "^4.1.2"
   },
   "license": "ISC",
   "prettier": {
