--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "julianbenegas",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -8,37 +8,23 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.21",
-    "@next/mdx": "^10.0.3",
-    "@types/lodash": "^4.14.149",
-    "@types/react-syntax-highlighter": "^11.0.4",
-    "chroma-js": "^2.1.0",
-    "date-fns": "^2.16.1",
-    "isomorphic-unfetch": "3.0.0",
-    "lodash": "^4.17.15",
-    "next": "^10.0.3",
-    "next-themes": "^0.0.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^3.9.0",
-    "react-spring": "^8.0.27",
-    "react-syntax-highlighter": "^12.2.1",
-    "toasted-notes": "^3.2.0"
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/chroma-js": "^2.0.0",
-    "@types/mdx-js__react": "^1.5.0",
-    "@types/node": "^12.12.21",
-    "@types/nprogress": "^0.2.0",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "prettier": "^2.0.2",
-    "typescript": "^4.1.2"
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "autoprefixer": "10.4.16",
+    "prettier": "^3.1.1",
+    "tailwindcss": "3.3.6",
+    "typescript": "^5.3.3"
   },
   "license": "ISC",
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "none"
+    "trailingComma": "es5"
   }
 }
