add views from upstash + ppr

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "postinstall": "basehub"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@upstash/redis": "^1.27.1",
     "basehub": "^1.2.14",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
-    "next": "^14.0.4",
+    "next": "14.0.5-canary.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
