--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "geist": "^1.2.0",
     "next": "14.0.5-canary.28",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@radix-ui/colors": "^3.0.0",
