--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@upstash/redis": "^1.27.1",
+    "@vercel/analytics": "^1.1.1",
     "basehub": "^1.2.14",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
