--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "next": "14.0.5-canary.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.33.1"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@radix-ui/colors": "^3.0.0",
