--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "basehub": "^1.2.14",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
-    "next": "14.0.5-canary.28",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "0.32.6"
