--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@upstash/redis": "^1.27.1",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/toolbar": "^0.1.11",
     "basehub": "^2.0.1",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
