--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "julianbenegas",
   "version": "2.0.0",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
+    "dev": "basehub dev & next",
+    "build": "basehub && next build",
     "start": "next start",
-    "type-check": "tsc",
-    "postinstall": "basehub"
+    "type-check": "tsc"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@upstash/redis": "^1.27.1",
     "@vercel/analytics": "^1.1.1",
     "@vercel/toolbar": "^0.1.11",
-    "basehub": "3.1.7",
+    "basehub": "4.0.13",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
     "next": "14.1.1-canary.62",
