--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/toolbar": "^0.1.11",
-    "basehub": "5.0.1",
+    "basehub": "5.0.2",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
-    "next": "14.1.1-canary.62",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "14.3.0-canary.73",
+    "react": "19.0.0-beta-26f2496093-20240514",
+    "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "0.32.6"
   },
   "devDependencies": {
