--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/toolbar": "^0.1.11",
-    "basehub": "7.5.20",
+    "basehub": "8.0.0-canary.17",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
-    "next": "15.0.0-rc.0",
-    "react": "19.0.0-rc-a960b92c-20240819",
-    "react-dom": "19.0.0-rc-a960b92c-20240819",
+    "next": "15.0.4-canary.12",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
     "sharp": "0.32.6"
   },
   "devDependencies": {
