--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "scripts": {
     "dev": "basehub dev & next",
-    "build": "basehub && next build",
+    "build": "next build",
     "start": "next start",
     "type-check": "tsc"
   },
@@ -11,12 +11,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/toolbar": "^0.1.11",
-    "basehub": "8.0.0-canary.17",
+    "basehub": "https://pkg.pr.new/basehub-ai/basehub@e718f69",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
-    "next": "15.0.4-canary.12",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
+    "next": "15.1.1-canary.5",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "sharp": "0.32.6"
   },
   "devDependencies": {
