--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/toolbar": "^0.1.11",
-    "basehub": "8.0.0-canary.46",
+    "basehub": "8.1.31",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
     "next": "15.1.1-canary.5",
