--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "julianbenegas",
   "version": "2.0.0",
+  "type": "module",
   "scripts": {
     "dev": "basehub dev & next",
     "build": "basehub build && next build",
@@ -11,7 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/toolbar": "^0.1.11",
-    "basehub": "8.2.7",
+    "basehub": "9.2.0",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
     "next": "15.3.1-canary.4",
@@ -28,7 +29,7 @@
     "autoprefixer": "10.4.16",
     "prettier": "^3.1.1",
     "tailwindcss": "3.4.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "license": "ISC",
   "prettier": {
